benchmarking scripts and readme updated (#13)